--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -116,7 +116,8 @@ body{
           }
         }
       }
-      .wrapper-text{
+      .wrapper-text,
+      .wrapper-cl{
         text-align: justify;
         h1{
           margin: 2vh 0;
@@ -181,7 +182,7 @@ body{
               border-radius: 5px;
               margin-bottom: 2vh;
             }
-            h2{margin-bottom: 2vh}
+            h2{margin: 2vh 0}
           }
         }
       }
