--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -330,6 +330,9 @@ body{
           display: grid;
           grid-template-columns: repeat(2, 1fr);
           grid-gap: 1em;
+          @media all and (max-width: 1000px) {
+            grid-template-columns: 1fr;
+          }
           .card{
             overflow: hidden;
             border: 1px solid #e2e2e2;
@@ -338,6 +341,7 @@ body{
             @include centerFlex;
             flex-direction: column;
             border-radius: 10px;
+            box-shadow: rgba(50, 50, 93, 0.25) 0 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
             .banner-top{
               height: 100%;
               width: 100%;
