--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -300,6 +300,9 @@ body{
               display: flex;
               flex-direction: column;
               //align-items: flex-end;
+              @media all and (max-width: 1100px) and (max-height: 1000px) {
+                top: 30%;
+              }
               .label{
                 //margin-top: 1em;
                 background: #e2e2e2;
@@ -317,7 +320,10 @@ body{
               border-radius: 5px;
               margin-bottom: 2vh;
             }
-            h2{margin: 2vh 0}
+            h2{
+              margin: 2vh 0;
+              &.first{margin-top: 0}
+            }
           }
         }
       }
