--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -324,6 +324,10 @@ body{
               margin: 2vh 0;
               &.first{margin-top: 0}
             }
+            hr{
+              border: 0.5px solid #e2e2e2;
+              margin: 1em 0;
+            }
           }
         }
       }
@@ -382,6 +386,7 @@ body{
       }
     }
     .btn-main {
+      &.no-click{cursor: default}
       width: 100%;
       appearance: none;
       background-color: var(--w);
